      pattern with suppressed (or hidden) parameters.

    - For running on batched systems, filtering based on num cores (np) and
      num devices (ndevice) is now turned off by default (where default means
      no max given in the platform plugin or on the command line). However,
      for devices (GPUs), the max will be zero unless devices_per_node is
      set for the platform.

Changes:

    - Using -S param=value on a test with a staged parameter will now retain
      the number of stages as defined by the test's list of values.

    - A test with duplicate parameter values will no longer create a parse
      error. Instead, duplicate values are silently removed.

    - The platform configuration mechanism has been refactored, and the old
      way is now considered deprecated (expected to be removed in Feb 2023).

      The idplatform.py file in a config directory is used to specify the
      platform name, the compiler name, and to specify platform parameters,
      such as the batch system type, the max num cores on the machine, etc.

      Here is an example idplatform.py file with the new functions:

          def get_platform():
              return "XBox"

          def get_compiler( platname, options ):
              return "Intel"

          def load_specifications( specs, platname, cplrname, options ):
              specs['batchsys'] = 'slurm'
              specs['cores_per_node'] = 44

      To transition from old to new, replace

          idplatform.platform(optdict) with idplatform.get_platform()

          idplatform.compiler(platname,optdict) with
                idplatform.get_compiler(platname,options)

          platform_plugin.initialize(plat) with
                idplatform.load_specifications(specs,platname,cplrname,options)

      To be clear, the platform_plugin.py file can be removed (is deprecated).

    - The topic-based inline documentation has been removed. The wiki pages